<resources>
    <string name="app_name">PokemonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_text">Поиск</string>
    <string name="favorites_text">Избранные</string>
    <string name="search_hint">Введите имя покемона</string>
    <string name="search">Поиск</string>
    <string name="no_results_text">Ничего не найдено</string>
    <string name="random_text">Случайный</string>
    <string name="search_alert">Пустое поле</string>
    <string name="error">Ошибка</string>
    <string name="empty_result">Список пока пуст</string>
    <string name="string_base_experience">Base experience:</string>
    <string name="string_weight">Weight:</string>
    <string name="string_height">Height:</string>
    <string name="string_get_random">Найти случайного</string>
    <string name="sign_up_btn">Войти</string>
</resources>