<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/pokemon_result_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_pokemon_image_random"
            android:layout_width="@dimen/pokemon_image_size"
            android:layout_height="@dimen/pokemon_image_size"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/spacing_normal_16"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/tv_pokemon_name_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_pokemon_image_random"
            tools:text="Ditto"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textSize="@dimen/font_huge_24"/>

        <TextView
            android:id="@+id/tv_base_experience_text_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pokemon_name_random"
            android:layout_toEndOf="@id/iv_pokemon_image_random"
            android:text="@string/string_base_experience"
            android:textSize="@dimen/font_normal_16"
            />

        <TextView
            android:id="@+id/tv_base_experience_scores_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pokemon_name_random"
            android:layout_toEndOf="@id/tv_base_experience_text_random"
            tools:text="43"
            android:textSize="@dimen/font_normal_16"
            />


        <ImageView
            android:id="@+id/iv_add_to_favorites_random"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_bookmark_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/spacing_normal_16"
            android:visibility="visible"
            />

    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progress_bar_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/no_results_placeholder_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:visibility="visible"
            android:text="@string/no_results_text" />

        <Button
            android:id="@+id/btn_get_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_get_random"
            android:layout_gravity="center"/>

    </FrameLayout>



</LinearLayout>