<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/search_background">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/search_button"
                android:background="@drawable/search_background"
                android:drawableStart="@drawable/ic_search_black"
                android:drawablePadding="8dp"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:inputType="textShortMessage"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:textColorHint="#C2C2C2"
                tools:hint="Введите название" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@drawable/search_background"
                android:text="@string/search" />

        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/pokemon_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_pokemon_image"
            android:layout_width="@dimen/pokemon_image_size"
            android:layout_height="@dimen/pokemon_image_size"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/spacing_normal_16"
            android:src="@drawable/default_pokemon_image"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/tv_pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_pokemon_image"
            android:text="Bulbasaur"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:textSize="@dimen/font_huge_24"/>


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_bookmark_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/spacing_normal_16"
            android:visibility="visible"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/no_results_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_results_text" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:visibility="gone" />


</LinearLayout>